<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_eat_data_setter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lex.huiseten.EatDataSetter">

    <TextView
        android:text="@string/are_you_eating_at_home_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/submitButton"
        android:onClick="onSubmit"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/comments_EditText"
        android:hint="@string/comments"
        android:layout_above="@+id/submitButton"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="31dp"
        android:visibility="gone" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RadioGroup"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3">

        <RadioButton
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Yes_RadioButton"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/No_RadioButton"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <CheckBox
        android:text="@string/i_have_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comments_CheckBox"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/RadioGroup"
        android:layout_alignLeft="@+id/RadioGroup"
        android:layout_alignStart="@+id/RadioGroup"
        android:onClick="onCheckboxClicked"/>

</RelativeLayout>
